# awvic

./: .gitignore  CMakeLists.txt  readme.md  readme.txt
bin64/: awvic.ini
bin64/syntaxs/: xml.svsyn
src/: awvic.cpp  awvic.sublime-project  stdwx.h  svAboutDialog.cpp  svAboutDialog.h  svAction.cpp  svAction.h  svBaseType.h  svBufText.cpp  svBufText.h  svCaret.cpp  svCaret.h  svCommand.cpp  svCommand.h  svCommandLineCtrl.cpp  svCommandLineCtrl.h  svCommonLib.cpp  svCommonLib.h  svDDialog.cpp  svDDialog.h  svDebugDialog01.cpp  svDebugDialog01.h  svDictionary.cpp  svDictionary.h  svFindReplaceCtrl.cpp  svFindReplaceCtrl.h  svLineText.cpp  svLineText.h  svListBoxCtrl.cpp  svListBoxCtrl.h  svListOfIntList.cpp  svListOfIntList.h  svMainFrame.cpp  svMainFrame.h  svOpenFilesCtrl.cpp  svOpenFilesCtrl.h  svPozList.cpp  svPozList.h  svPreference.cpp  svPreference.h  (+18 more)
src/win.rc/: awvic.rc
vc2013/awvic/: awvic.sln  awvic.vcxproj  awvic.vcxproj.filters
